--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -1,6 +1,8 @@
 <html>
 
 <head>
+  <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Work+Sans:wght@800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
@@ -179,12 +181,12 @@
           <p>the code written above works as or logic.</p>
           <li>Finding all the documents having property's value greater than or greater than and equal to similarily for less than something</li>
           <code>db.leaners.find({prop12:{$gt:9}})</code>
-          <pre>
-        gt-greater than
-        lt-lower than
-        gte-greater than or equal to
-        lte-lower than or equal to 
-        </pre>
+          <p>
+        gt-greater than <br>
+        lt-lower than<br>
+        gte-greater than or equal to<br>
+        lte-lower than or equal to <br>
+        </p>
           <li>$in</li>
           <code>db.leaners.find({prop123:{$in:[9,10,17]})</code>
           <p>it will return all those docs whose prop123 is equal to either one of 9, 10 or 17.</p>
@@ -273,8 +275,8 @@
           }
       ])
     </code>
-    <p>all these queries will run in order doing what they are meant to.</p>
-      </ul>
+  </ul>
+  <p>all these queries will run in order doing what they are meant to.</p>
  </section>
 
       <section class="main-section" id="Text_Indexing">
